# stm32f4discovery

./: CMakeLists.txt  README.md  toolchain.cmake
cpp/: CMakeLists.txt
cpp/src/: main.cpp
helloWord/: CMakeLists.txt
helloWord/src/: main.c
